Revision history for libev, a high-performance and full-featured event loop.

TODO: ev_walk
TODO: remain
	- ev_unloop and ev_loop wrongly used a global variable to exit loops,
          instead of using a per-loop variable (bug caught by accident...).
	- Denis F. Latypoff corrected many typos in example code snippets.
	- the ev_set_io_collect_interval interpretation has changed.
        - honor autoconf detection of EV_USE_CLOCK_SYSCALL, also double-
          check that the syscall number is available before trying to
          use it (reported by ry@tinyclouds).
        - use GetSystemTimeAsFileTime instead of _timeb on windows, for
          slightly higher accuracy.
        - properly declare ev_loop_verify even when !EV_MULTIPLICITY.
        - implement ev_loop_depth.
        - do not compile in any priority code when EV_MAXPRI == EV_MINPRI.

3.6  Tue Apr 28 02:49:30 CEST 2009
	- multiple timers becoming ready within an event loop iteration
          will be invoked in the "correct" order now.
	- do not leave the event loop early just because we have no active
          watchers, fixing a problem when embedding a kqueue loop
          that has active kernel events but no registered watchers
          (reported by blacksand blacksand).
	- correctly zero the idx values for arrays, so destroying and
          reinitialising the default loop actually works (patch by
          Malek Hadj-Ali).
        - implement ev_suspend and ev_resume.
        - new EV_CUSTOM revents flag for use by applications.
        - add documentation section about priorites.
        - add a glossary to the dcoumentation.
        - extend the ev_fork description slightly.
        - optimize a jump out of call_pending.

3.53 Sun Feb 15 02:38:20 CET 2009
	- fix a bug in event pipe creation on win32 that would cause a
          failed assertion on event loop creation (patch by Malek Hadj-Ali).
	- probe for CLOCK_REALTIME support at runtime as well and fall